--- a/.github/workflows/main_cleanscraper.yml
+++ b/.github/workflows/main_cleanscraper.yml
@@ -31,6 +31,9 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
+      - name: Print working directory
+        run: pwd
+
       - name: Install dependencies
         run: pip install -r requirements.txt
         
